# goode_twitch_bot

./: .env-example  .gitignore  .pre-commit-config.yaml  LICENCE  README.md  TODO.txt  pyproject.toml  requirements.txt
bot/: main.py
goode_bot_twitch/: __init__.py  bot.py  channel_cache.py  checks.py  database.py  errors.py  logging_handler.py  main.py  twitch_bot.py  utils.py
goode_bot_twitch/cogs/: admin.py  basic.py  cakez.py  location.py  math.py  mod.py  random.py  search.py  socials.py  time.py  twitch.py  units.py  words.py
goode_bot_twitch/cogs/utils/: command_decorators.py  thankyou_message.py
goode_bot_twitch/cogs/utils/units/: errors.py  time.py
goode_bot_twitch/models/: abstract_base.py  base_model_functions.py  counters.py  errors.py  twitch_channel.py  user.py
goode_bot_twitch/webserver/: webserver.py
goode_bot_twitch/webserver/blueprints/auth/: __init__.py
goode_bot_twitch/webserver/static/css/: style.css
goode_bot_twitch/webserver/templates/: base.html  channels.html  index.html  login.html
utilities/: __init__.py  errors.py  hashing.py  time.py  unit_conversion.py
